<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="152dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="25dp"
        android:onClick="btnSave"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnClose"
        app:layout_constraintTop_toBottomOf="@+id/lang_sw" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="147dp"
        android:layout_height="38dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:onClick="btnBack"
        android:text="@string/close"
        app:backgroundTint="#909090"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_sw" />

    <EditText
        android:id="@+id/tb_mag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tb_num" />

    <EditText
        android:id="@+id/tb_num"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/num_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/lang_sw"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="25dp"
        android:entries="@array/languages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tb_mag" />

    <TextView
        android:id="@+id/num_tv"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="10dp"
        android:text="@string/items_number"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/tb_num"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:text="@string/language"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/lang_sw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="@string/min_magn"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/tb_mag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>